Fix property text inputs on Firefox
This lead to bad UX if the input contains words longer than the
available width, which happens most frequently in sidebar editing.
Chrome automatically uses this style for contenteditable.
Now, all browsers behave the same.

--- a/src/assets/stylesheets/_scrivito_extensions.scss
+++ b/src/assets/stylesheets/_scrivito_extensions.scss
@@ -13,6 +13,7 @@
   padding: 0 8px;
   min-height: 30px;
   line-height: 30px;
+  word-break: break-all;
 }
 .content_property_input:focus {
   box-shadow: 0 0 0 2px #577fb6 inset !important;
